rellenado de galería

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
         <meta name="ciclo" content="1ºDAW IES Zaidín Vergeles">
         <style>
         body {
-/*background-image: url(images/fondo.jpg);
-            background-repeat: no-repeat;
-            */
+
             background-color: rgb(158, 207, 226);
         }
 
@@ -61,13 +59,14 @@ font-size:larger;
             }
             footer {
                 height: 50px;
-                line-height: 50px;
+               
               text-align: center;
-                position: absolute;
-                bottom: 0;
+                display: table;
+                bottom: 0px;
                 left: 0;
                 width: 100%;
                 background-color: rgb(83, 117, 117);
+
             }
         </style>
     </head>
@@ -123,7 +122,7 @@ font-size:larger;
             Aprovechando la llegada del puente, la Asociación de Jugger Granada 
             permitirá el acceso gratuito a todos aquellos jugadores que quieran probar el deporte.
             <br>
-            <a href="#Centrenos" style="color: blue; font-size: medium;"> Para inscribirte pulsa aquí.</a>
+            <a href="entrenos.html" style="color: blue; font-size: medium;"> Para inscribirte pulsa aquí.</a>
             <br>
             La inscripción está reservada a los primeros 20 jugadores que se inscriban.
              Estos serán asignados a un equipo para la participación en los entrenos.
@@ -184,8 +183,10 @@ font-size:larger;
     >
 </article>
 <footer>
-    Práctica de HTML
-    Alumno: Daniel Fontalva Ostio
+    <h4>Práctica de HTML <br>
+    Alumno: Daniel Fontalva Ostio 
+   <br> Ciclo Formativo DAW, primer módulo 
+    </h4>
 </footer>
 
 </body>
