mejoras en la página tienda

--- a/galeria.html
+++ b/galeria.html
@@ -87,7 +87,7 @@ font-size:larger;
                 <p style="font-size: xx-large; background-color: rgb(104, 166, 177)">Página oficial de Nevaditos Jugger Club</p>
             
             <nav class="navegador" style="text-align: center;  padding-top: 15px ; padding-bottom: 15px;">
-                <a href="index.html">| Novedades |</a>
+                <a href="index.html">| Inicio |</a>
                 <a href="galeria.html">| Galería |</a>
                 <a href="tienda.html">| Tienda |</a>
                 <a href="contacto.html">| Contacto |</a>
