--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ font-size:larger;
             <p style="font-size: xx-large; background-color: rgb(104, 166, 177)">Página oficial de Nevaditos Jugger Club</p>
         
         <nav class="navegador" style="text-align: center;  padding-top: 15px ; padding-bottom: 15px;">
-            <a href="index.html">| Novedades |</a>
+            <a href="index.html">| Inicio |</a>
             <a href="galeria.html">| Galería |</a>
             <a href="tienda.html">| Tienda |</a>
             <a href="contacto.html">| Contacto |</a>
@@ -173,6 +173,7 @@ font-size:larger;
         <br>
         La aparición de la Federación Andaluza de Jugger se presenta como una oportunidad única para dar vida a nuestro deporte y a las asociaciones en crecimiento como la granadina.
         <br>
+        Podrás comprar las camisetas del nuevo equipo en <a href="tienda.html" style="font-size: medium;">el siguiente enlace.</a>
     </p>
     <img
         src="images/perros.jpg"
