--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ font-size:larger;
             <h3>Nuevas camisetas del equipo</h3>
         </div>
         <p>
-            Tras una larga espera, el equipo ya tiene preparado el nuevo diseño listo para su venta. 
+            Tras una larga espera, el equipo ya tiene preparado el <b> nuevo diseño </b> listo para su venta. 
             El precio para socios es de 10€, manteniendo el coste inicial de 15€ para los recién llegados.
             <br>
             Las camisetas utilizan un tejido deportivo con alta transpirabilidad que se adapta a tus prácticas deportivas.
@@ -120,11 +120,11 @@ font-size:larger;
         </div>
         <p>
             Aprovechando la llegada del puente, la Asociación de Jugger Granada 
-            permitirá el acceso gratuito a todos aquellos jugadores que quieran probar el deporte.
+            permitirá el <b> acceso gratuito </b> a todos aquellos jugadores que quieran probar el deporte.
             <br>
             <a href="entrenos.html" style="color: blue; font-size: medium;"> Para inscribirte pulsa aquí.</a>
             <br>
-            La inscripción está reservada a los primeros 20 jugadores que se inscriban.
+            La inscripción está reservada a los <b> primeros 20 jugadores </b> que se inscriban.
              Estos serán asignados a un equipo para la participación en los entrenos.
         </p>
         <img
@@ -171,7 +171,7 @@ font-size:larger;
     <p>
         Con la llegada del equipo Perros de Tíndalos, la Asociación de Jugger Granada se expande y opta por declarse como club deportivo. 
         <br>
-        La aparición de la Federación Andaluza de Jugger se presenta como una oportunidad única para dar vida a nuestro deporte y a las asociaciones en crecimiento como la granadina.
+        La aparición de la <b>Federación Andaluza de Jugger </b> se presenta como una oportunidad única para dar vida a nuestro deporte y a las asociaciones en crecimiento como la granadina.
         <br>
         Podrás comprar las camisetas del nuevo equipo en <a href="tienda.html" style="font-size: medium;">el siguiente enlace.</a>
     </p>
