retoques finales antes de la entrega

--- a/tienda.html
+++ b/tienda.html
@@ -72,7 +72,7 @@ margin: 15px;
 background-color: rgb(255, 255, 255);
 border: 1px solid black;
 width: 300px;
-height: 400px;
+height: 420px;
 padding: 10px;
             }
         </style>
@@ -96,12 +96,48 @@ padding: 10px;
                 </nav>
             </div>
         </div>
-        <div class="articulo">
+        <div class="articulo" style="text-align: center;">
             <img src="images/camiseta.jpg" alt="camiseta básica" width="300" height="300">
             <p style="font-size: large; color: rgb(97, 68, 45);">Camiseta Jugger Negra</p>
             <p style="font-size: medium;"> Tallas: L-M-L-XL.
                 <br>
-                Precio: 15€
+                Precio: 14,99€
+            </p>
+        </div>
+        <div class="articulo" style="text-align: center;">
+            <img src="images/camjugger.jpg" alt="camiseta básica duelo" width="300" height="300">
+            <p style="font-size: large; color: rgb(97, 68, 45);">Camiseta Jugger Duelo</p>
+            <p style="font-size: medium;"> Tallas: L-M-L-XL.
+                <br>
+                Precio: 14,99€
+            </p>
+        </div>
+        <div class="articulo" style="text-align: center;">
+            <img src="images/camjugger2.jpg" alt="camiseta básica roja" width="300" height="300">
+            <p style="font-size: large; color: rgb(97, 68, 45);">Camiseta Jugger Roja</p>
+            <p style="font-size: medium;"> Tallas: L-M-L-XL. 
+                <br>
+                <strong style="color: red;"> Descuento del 20%. 
+           
+            <del>9,99€</del> </strong>
+                <br>
+                Precio: 7,99€
+            </p>
+        </div>
+        <div class="articulo" style="text-align: center;">
+            <img src="images/camisetas.jpg" alt="camiseta básica buitres" width="300" height="300">
+            <p style="font-size: large; color: rgb(97, 68, 45);">Camiseta Jugger Buitres Negros</p>
+            <p style="font-size: medium;"> Tallas: Solo L, <strong style="color: red;"> Últimas Unidades. </strong>
+                <br>
+                Precio: 19,99€
+            </p>
+        </div>
+        <div class="articulo" style="text-align: center;">
+            <img src="images/juggercami.jpg" alt="camiseta básica evolución" width="300" height="300">
+            <p style="font-size: large; color: rgb(97, 68, 45);">Camiseta Jugger Evolución</p>
+            <p style="font-size: medium;"> Tallas: L-M-L-XL.
+                <br>
+                Precio: 24,99€
             </p>
         </div>
         <footer>
