arreglos de index tras validator w3

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Página principal</title>
-        <link rel="icon" type="x-icon" href="images/nevadito.jpg">
+        <link rel="icon"  href="images/nevadito.jpg">
         <meta name="author" content="Daniel Fontalva Ostio">
         <meta name="ciclo" content="1ºDAW IES Zaidín Vergeles">
         <style>
@@ -76,8 +76,8 @@ font-size:larger;
             <img
                 src="images/cabecera1.jpg"
                 alt="Equipo de jugger"
-                height="200px"
-                width="800px"
+                height="200"
+                width="800"
             >
         </div>
         <div style="background-color: rgb(104, 166, 177); text-align: center; padding-top: 0.1cm;">
@@ -131,7 +131,7 @@ font-size:larger;
             src="images/combate.jpg"
             style="margin: 5px;"
             alt="Partido de Jugger"
-            width="600px style text-align center"
+            width="600"
         >
     </article>
     <aside class="seccion" style="width: 250;">
