páginas arregladas tras el análisis en validator.w3.org

--- a/entrenos.html
+++ b/entrenos.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Página principal</title>
-        <link rel="icon" type="x-icon" href="images/nevadito.jpg">
+        <link rel="icon" href="images/nevadito.jpg">
         <meta name="author" content="Daniel Fontalva Ostio">
         <meta name="ciclo" content="1ºDAW IES Zaidín Vergeles">
         <style>
@@ -90,8 +90,8 @@ font-size:larger;
             <img
                 src="images/cabecera1.jpg"
                 alt="Equipo de jugger"
-                height="200px"
-                width="800px"
+                height="200"
+                width="800"
             >
             <div style="background-color: rgb(104, 166, 177); text-align: center; padding-top: 0.1cm;">
                 <p style="font-size: xx-large; background-color: rgb(104, 166, 177)">Página oficial de Nevaditos Jugger Club</p>
@@ -149,6 +149,7 @@ font-size:larger;
                             Perros de Tíndalos
                             <input type="submit">
                         </div>
+                    </div>
                     </article>
                 </nav>
             </div>
@@ -163,11 +164,12 @@ font-size:larger;
                     loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"
                 ></iframe>
+            </nav>
             </div>
-        </nav>
+      
         <div style="border: 1px solid black; float: left; margin-left: 50px; margin-top: 20px; background-color: rgb(157, 197, 231); padding: 5px; text-align: center;">
             <table style="background-color: rgb(180, 204, 224);">
-<tr><h3>Entrenamientos cada semana</h3></tr>
+<tr><strong>Entrenamientos cada semana</strong> </tr>
 <tr>
     <th style="border: none;"></th>
    <th>Lunes</th>
