--- a/galeria.html
+++ b/galeria.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Página principal</title>
-        <link rel="icon" type="x-icon" href="images/nevadito.jpg">
+        <link rel="icon" href="images/nevadito.jpg">
         <meta name="author" content="Daniel Fontalva Ostio">
         <meta name="ciclo" content="1ºDAW IES Zaidín Vergeles">
         <style>
@@ -80,8 +80,8 @@ font-size:larger;
             <img
                 src="images/cabecera1.jpg"
                 alt="Equipo de jugger"
-                height="200px"
-                width="800px"
+                height="200"
+                width="800"
             >
             <div style="background-color: rgb(104, 166, 177); text-align: center; padding-top: 0.1cm;">
                 <p style="font-size: xx-large; background-color: rgb(104, 166, 177)">Página oficial de Nevaditos Jugger Club</p>
@@ -94,7 +94,6 @@ font-size:larger;
                 <a href="entrenos.html">| Próximos entrenos |</a>
             </nav>
         </div>
-        </nav>
     </div>
     <div style=" padding: 20px; margin: 20px;">
         <p style="text-align: center; font-size: xx-large; ;">Últimos vídeos</p>
@@ -135,8 +134,8 @@ font-size:larger;
             <img
                 src="images/combate.jpg"
                 alt="Combate de jugger"
-                width="500px"
-                height="300px"
+                width="500"
+                height="300"
             >
         </div>
         <div class="seccion">
@@ -146,8 +145,8 @@ font-size:larger;
             <img
                 src="images/asociacion.jpg"
                 alt="Logo de la nueva asociación de Granada"
-                width="400px"
-                height="300px"
+                width="400"
+                height="300"
             >
         </div>
         <div class="seccion">
