--- a/tienda.html
+++ b/tienda.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tienda</title>
-        <link rel="icon" type="x-icon" href="images/nevadito.jpg">
+        <link rel="icon" href="images/nevadito.jpg">
         <meta name="author" content="Daniel Fontalva Ostio">
         <meta name="ciclo" content="1ºDAW IES Zaidín Vergeles">
         <style>
@@ -82,8 +82,8 @@ padding: 10px;
             <img
                 src="images/cabecera1.jpg"
                 alt="Equipo de jugger"
-                height="200px"
-                width="800px"
+                height="200"
+                width="800"
             >
             <div style="background-color: rgb(104, 166, 177); text-align: center; padding-top: 0.1cm;">
                 <p style="font-size: xx-large; background-color: rgb(104, 166, 177)">Página oficial de Nevaditos Jugger Club</p>
