--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contacto</title>
-        <link rel="icon" type="x-icon" href="images/nevadito.jpg">
+        <link rel="icon"  href="images/nevadito.jpg">
         <meta name="author" content="Daniel Fontalva Ostio">
         <meta name="ciclo" content="1ºDAW IES Zaidín Vergeles">
         <style>
@@ -76,8 +76,8 @@ font-size:larger;
             <img
                 src="images/cabecera1.jpg"
                 alt="Equipo de jugger"
-                height="200px"
-                width="800px"
+                height="200"
+                width="800"
             >
             <div style="background-color: rgb(104, 166, 177); text-align: center; padding-top: 0.1cm;">
                 <p style="font-size: xx-large; background-color: rgb(104, 166, 177)">Página oficial de Nevaditos Jugger Club</p>
@@ -97,14 +97,14 @@ font-size:larger;
             <p style="margin: 5px;">Si desea realizar alguna consulta, agradecemos el contacto a través del siguiente formulario.</p>
             <article class="seccionCuest">
                 <div style="margin: 5px;">
-                    <label for="nombre">
+                    <label for="nombre1">
                         <h3>Nombre:</h3>
                     </label>
-                    <input type="text" id="nombre">
-                    <label for="correo">
+                    <input type="text" id="nombre1">
+                    <label for="correo1">
                         <h3>Correo electrónico:</h3>
                     </label>
-                    <input type="email" id="correo">
+                    <input type="email" id="correo1">
                     <br>
                     <h3>Indique el motivo de su consulta:</h3>
                     <input type="radio" id="compra" name="tematica">
@@ -133,14 +133,14 @@ font-size:larger;
             <article class="seccionCuest">
                 <div style="margin: 5px;">
                     <div>
-                        <label for="nombre">
+                        <label for="nombre2">
                             <h3>Nombre:</h3>
                         </label>
-                        <input type="text" id="nombre">
-                        <label for="correo">
+                        <input type="text" id="nombre2">
+                        <label for="correo2">
                             <h3>Correo electrónico:</h3>
                         </label>
-                        <input type="email" id="correo">
+                        <input type="email" id="correo2">
                         <h3>Horario en el que asistirá.</h3>
                         <input type="checkbox" id="horario">
                         <label for="horario">5/12 - 12:00</label>
@@ -169,6 +169,7 @@ font-size:larger;
 <input type="radio" id="perros" name="equipo"> Perros de Tíndalos
 <input type="submit">
                     </div>
+                </div>
                 </article>
             </nav>
         </div>
