Último commit del proyecto con la revisión del readme

--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,7 @@
         <link rel="icon"  href="images/nevadito.jpg">
         <meta name="author" content="Daniel Fontalva Ostio">
         <meta name="ciclo" content="1ºDAW IES Zaidín Vergeles">
+        <meta name="description" content="Datos de contacto de Nevaditos Jugger Club">
         <style>
         body {
             background-color: rgb(158, 207, 226);
