--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="icon"  href="images/nevadito.jpg">
         <meta name="author" content="Daniel Fontalva Ostio">
         <meta name="ciclo" content="1ºDAW IES Zaidín Vergeles">
+        <meta name="description" content="Página de Inicio de Nevaditos Jugger Club y Asociación Granadina de Jugger">
         <style>
         body {
 
