--- a/entrenos.html
+++ b/entrenos.html
@@ -7,6 +7,7 @@
         <link rel="icon" href="images/nevadito.jpg">
         <meta name="author" content="Daniel Fontalva Ostio">
         <meta name="ciclo" content="1ºDAW IES Zaidín Vergeles">
+        <meta name="description" content="Listado de próximos entrenos y formulario de participación.">
         <style>
         body {
             background-color: rgb(158, 207, 226);
