--- a/galeria.html
+++ b/galeria.html
@@ -7,6 +7,7 @@
         <link rel="icon" href="images/nevadito.jpg">
         <meta name="author" content="Daniel Fontalva Ostio">
         <meta name="ciclo" content="1ºDAW IES Zaidín Vergeles">
+        <meta name="description" content="Galería de contenidos realizados por Nevaditos Jugger Club">
         <style>
         body {
             background-color: rgb(158, 207, 226);
