--- a/tienda.html
+++ b/tienda.html
@@ -7,6 +7,7 @@
         <link rel="icon" href="images/nevadito.jpg">
         <meta name="author" content="Daniel Fontalva Ostio">
         <meta name="ciclo" content="1ºDAW IES Zaidín Vergeles">
+        <meta name="description" content="Tienda oficial de Jugger Granada y sus equipos Perros de Tíndalos y Nevaditos Jugger Club">
         <style>
         body {
             background-color: rgb(158, 207, 226);
