--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
             flex-direction: row;
         }
         header{
-         position: sticky;
          justify-content: space-between;
-         margin: 40px;
+         margin: 30px;
+         position: -webkit-sticky;
+         position: sticky;
+         top: 30px;
         }
         a.button {
             font-size: x-large;
@@ -40,11 +42,17 @@
             color: black;
         }
 
+#logo{
+    display: flex;
+
+    justify-content: center;
+}
+
         </style>
         <script src="https://kit.fontawesome.com/a1edf0eaf7.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header class="flex-container" >
+        <header class="flex-container">
             <div>
             <a href="" class="button">Inicio</a>
             <a href="" class="button">Galería</a>
@@ -63,5 +71,51 @@
                 </a>
             </div>
         </header>
+        <div id="logo">
+            <img src="images/asociacion.jpg" alt="icono asociación" style="width: 270px; height: 200px;">
+        </div>
+<galeria class="grid-container">
+<div><img src="" alt=""></div>
+<div><img src="" alt=""></div>
+<div><img src="" alt=""></div>
+<div><img src="" alt=""></div>
+</galeria>
+
+
+
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
+<h1>Hola</h1>
     </body>
 </html>
