--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             color: black;
             text-decoration: none;
             border-radius: 25px;
+            float: left;
         }
         a.button:hover {
             background-color: aquamarine;
@@ -47,19 +48,40 @@
 
     justify-content: center;
 }
-
+.grid-container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+}
+.grid-galeriaVideos {
+    padding: 20px;
+    text-align: center;
+}
+h1{
+    font-size: xx-large;
+    font-style: ;
+}
         </style>
+        <!--
+En la siguiente línea estoy importando una librería de iconos de la cual he sacado los logos de Twitter, Instagram y Tik Tok.
+Para que funcione, se incluye en el <head> la etiqueta <script> junto con el enlace de acceso a la librería de iconos. 
+    La propia página web te facilita el proceso de un modo similar a Youtube con sus iframes.
+
+-->
         <script src="https://kit.fontawesome.com/a1edf0eaf7.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="flex-container">
             <div>
-            <a href="" class="button">Inicio</a>
-            <a href="" class="button">Galería</a>
-            <a href="" class="button">Tienda</a>
-            <a href="" class="button">Contacto</a>
-        </div>
+                <a href="" class="button">Inicio</a>
+                <a href="" class="button">Galería</a>
+                <a href="" class="button">Tienda</a>
+                <a href="" class="button">Contacto</a>
+            </div>
             <div>
+                <!--
+En estas líneas utilizo la librería de iconos. Se trata de una etiqueta 
+<i> en la que asignamos la class del icono en cuestión. Desde la página web obtenemos la class="" que necesitamos para cada icono-->
                 <a href="" class="i">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
@@ -74,48 +96,60 @@
         <div id="logo">
             <img src="images/asociacion.jpg" alt="icono asociación" style="width: 270px; height: 200px;">
         </div>
-<galeria class="grid-container">
-<div><img src="" alt=""></div>
-<div><img src="" alt=""></div>
-<div><img src="" alt=""></div>
-<div><img src="" alt=""></div>
-</galeria>
-
-
-
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
-<h1>Hola</h1>
+        <div class="grid-galeriaVideos" style="grid-column: 1/3">
+        <h1>¿Qué es el jugger?</h1>
+    </div>
+        <galeria class="grid-container">
+            <div class="grid-galeriaVideos">
+                <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/RjA_pABa7F4?si=AX5L_ckT2IAncPY7"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
+                ></iframe>
+            </div>
+            <div class="grid-galeriaVideos">
+                <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/-RkqbdtCJGs?si=w1zSSQQrIgNQ0A6F"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
+                ></iframe>
+            </div>
+            <div class="grid-galeriaVideos">
+                <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/GdtM41CgSg0?si=qqoehCvjQ5JlvxJh"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
+                ></iframe>
+            </div>
+            <div class="grid-galeriaVideos"></div>
+            <div class="grid-galeriaVideos"></div>
+            <div class="grid-galeriaVideos"></div>
+        </galeria>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
+        <h1>Hola</h1>
     </body>
 </html>
