--- a/index.html
+++ b/index.html
@@ -6,69 +6,11 @@
         <title>Document</title>
         <link rel="icon" href="images/asociacion.jpg">
         <link rel="stylesheet" href="stylesheet.css">
-        <style>
-        .flex-container{
-            display: flex;
-            flex-direction: row;
-        justify-content: space-between;
-        }
-        header{
-         justify-content: space-between;
-         margin: 30px;
-         position: -webkit-sticky;
-         position: sticky;
-         top: 30px;
-         background-color: rgb(75, 139, 118);
-        }
-        a.button {
-            font-size: x-large;
-            margin: 10px;
-            padding: 10px;
-            border: 0.1px solid black;
-            background-color: rgb(139, 163, 243);
-            text-align: center;
-            cursor: pointer;
-            color: black;
-            text-decoration: none;
-            border-radius: 25px;
-            float: left;
-        }
-        a.button:hover {
-            background-color: aquamarine;
-        }
-        a.i {
-            text-align: center;
-            font-size: 36px;
-      margin-right: 15px;
-            cursor: pointer;
-            text-decoration: none;
-            color: black;
-            margin-top: 10px;
-        }
-
-#logo{
-    display: flex;
-
-    justify-content: center;
-}
-.grid-container{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    padding: 10px;
-}
-.grid-galeriaVideos {
-    padding: 20px;
-    text-align: center;
-}
-h1{
-    font-size: xx-large;
-}
-        </style>
+       
         <!--
 En la siguiente línea estoy importando una librería de iconos de la cual he sacado los logos de Twitter, Instagram y Tik Tok.
 Para que funcione, se incluye en el <head> la etiqueta <script> junto con el enlace de acceso a la librería de iconos. 
     La propia página web te facilita el proceso de un modo similar a Youtube con sus iframes.
-
 -->
         <script src="https://kit.fontawesome.com/a1edf0eaf7.js" crossorigin="anonymous"></script>
     </head>
@@ -99,7 +41,7 @@ En estas líneas utilizo la librería de iconos. Se trata de una etiqueta
         <div id="logo">
             <img src="images/asociacion.jpg" alt="icono asociación" style="width: 270px; height: 200px;">
         </div>
-        <div class="grid-galeriaVideos" style="grid-column: 1/3">
+        <div class="grid-titulos">
         <h1>¿Qué es el jugger?</h1>
     </div>
         <galeria class="grid-container">
