--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
         <title>Document</title>
         <link rel="icon" href="images/asociacion.jpg">
         <link rel="stylesheet" href="stylesheet.css">
-       
+
+        <!-- Importando una fuente para la web-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
         <!--
 En la siguiente línea estoy importando una librería de iconos de la cual he sacado los logos de Twitter, Instagram y Tik Tok.
 Para que funcione, se incluye en el <head> la etiqueta <script> junto con el enlace de acceso a la librería de iconos. 
@@ -15,25 +19,24 @@ Para que funcione, se incluye en el <head> la etiqueta <script> junto con el enl
         <script src="https://kit.fontawesome.com/a1edf0eaf7.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header class="flex-container">
-            <div>
-                <a href="" class="button">Inicio</a>
-                <a href="" class="button">Galería</a>
-                <a href="" class="button">Tienda</a>
-                <a href="" class="button">Contacto</a>
-            </div>
+        <header>    
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Acerca de</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
             <div>
                 <!--
 En estas líneas utilizo la librería de iconos. Se trata de una etiqueta 
 <i> en la que asignamos la class del icono en cuestión. Desde la página web obtenemos la class="" que necesitamos para cada icono-->
-                <a href="" class="i">
-                    <i class="fa-brands fa-instagram" style="margin: 20px;"></i>  <!--
-                        IMPORTANTE AQUI -->
+                <a href="https://www.instagram.com/juggergranada/?hl=es" class="i">
+                    <i class="fa-brands fa-instagram"></i> 
                 </a>
-                <a href="" class="i">
+                <a href="https://www.tiktok.com/@abenarabi_juggerclub" class="i">
                     <i class="fa-brands fa-tiktok"></i>
                 </a>
-                <a href="" class="i">
+                <a href="https://twitter.com/FicZone/status/1759929188675440715" class="i">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
             </div>
@@ -42,7 +45,7 @@ En estas líneas utilizo la librería de iconos. Se trata de una etiqueta
             <img src="images/asociacion.jpg" alt="icono asociación" style="width: 270px; height: 200px;">
         </div>
         <div class="grid-titulos">
-        <h1>¿Qué es el jugger?</h1>
+        <h1>¿Qué es el Jugger?</h1>
     </div>
         <galeria class="grid-container">
             <div class="grid-galeriaVideos">
@@ -82,19 +85,5 @@ En estas líneas utilizo la librería de iconos. Se trata de una etiqueta
             <div class="grid-galeriaVideos"></div>
             <div class="grid-galeriaVideos"></div>
         </galeria>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
     </body>
 </html>
