Nueva sección de artículos

--- a/index.html
+++ b/index.html
@@ -54,6 +54,29 @@ En estas líneas utilizo la librería de iconos. Se trata de una etiqueta
         <div class="grid-titulos">
             <h1>¿Qué es el Jugger?</h1>
         </div>
+        <div class="grid-titulos">
+            <h1>¿Qué es el Jugger?</h1>
+            <div class="grid-container2">
+          
+            <div id="articulo">
+                <div>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Earum blanditiis nemo quasi dolores magnam ipsam, ipsum
+                    aliquid suscipit vel incidunt natus officiis sit iusto culpa
+                    repellat itaque! Possimus, unde placeat!
+                </div>
+
+            </div>
+
+            <div id="articulo">
+                <div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Dolore labore distinctio voluptatem atque voluptas, quae ut
+                    amet perspiciatis quaerat reprehenderit, laboriosam error
+                    officia debitis maiores possimus. Atque rem ducimus saepe?
+                </div>
+            </div>
+        </div>
         <galeria class="grid-container">
             <div class="grid-galeriaVideos">
                 <iframe
