Corrección de errores en el responsive

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ En estas líneas utilizo la librería de iconos. Se trata de una etiqueta
                 </div>
 
                 <a href="Cartel Resumen Jugger - VERSION IMPRESION.pdf">
-                    <img id="reglas" src="images/reglas.png" alt="reglas">
+                    <img src="images/reglas.png" alt="reglas">
                 </a>
                 <div class="cuerpo" style="text-align: center;">
                     <p>Haz clic en la imagen para saber más.</p></div>
