Nuevos horarios de entrenamiento

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Para que funcione, se incluye en el <head> la etiqueta <script> junto con el enl
         <header>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#Nuestros partidos">Nuestros partidos</a></li>
+                <li><a href="#Nuestros partidos">Partidos</a></li>
                 <li><a href="#entrenamientos">Entrenamientos</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
@@ -175,6 +175,28 @@ En estas líneas utilizo la librería de iconos. Se trata de una etiqueta
                 <div id="articulo">
                     <div class="cabecera">
                         <h1>Calendario de entrenamientos</h1>
+                    </div>
+                    <div class="horario">
+                        <div class="casilla-dia">Hora</div>
+                        <div class="casilla-dia">Lunes</div>
+
+                        <div class="casilla-dia">Miércoles</div>
+
+                        <div class="casilla-dia">Viernes</div>
+                        <div class="casilla-dia">Sábado</div>
+                        <div class="casilla-dia">Domingo</div>
+
+                        <div class="casilla-hora" id="hora1">11:00 - 12:00</div>
+                        <div class="casilla-hora" id="hora2">12:00 - 13:00</div>
+                        <div class="casilla-hora" id="hora3">19:00 - 20:00</div>
+                        <div class="casilla-hora" id="hora4">19:00 - 21:00</div>
+
+                        <div class="casilla-marcada" id="marca1"> </div>
+                        <div class="casilla-marcada" id="marca2"> Cancelado</div>
+                        <div class="casilla-marcada" id="marca3"> </div>
+                        <div class="casilla-marcada" id="marca4"> </div>
+                        <div class="casilla-marcada" id="marca5"> </div>
+
                     </div>
 
                 </div>
