Corrección de errores en responsive

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ En estas líneas utilizo la librería de iconos. Se trata de una etiqueta
                 <p style="text-align: center; font-size: 1.3em;"> En Granada
                     tenemos dos equipos activos a nivel competitivo:</p>
                 <div class="flex-container">
-                    <img src="images/perros.jpg" alt>
-                    <img src="images/nevaditos.jpg" alt>
+                    <img src="images/perros.jpg" alt="imagen equipo" style="width: 100; max-width: 50%;">
+                    <img src="images/nevaditos.jpg" alt="imagen equipo" style="width: 100; max-width: 50%;">
                 </div>
 
             </div>
