--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Para que funcione, se incluye en el <head> la etiqueta <script> junto con el enl
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#Nuestros partidos">Partidos</a></li>
                 <li><a href="#entrenamientos">Entrenamientos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#formulario">Contacto</a></li>
             </ul>
             <div>
                 <!--
@@ -80,8 +80,10 @@ En estas líneas utilizo la librería de iconos. Se trata de una etiqueta
                 <p style="text-align: center; font-size: 1.3em;"> En Granada
                     tenemos dos equipos activos a nivel competitivo:</p>
                 <div class="flex-container">
-                    <img src="images/perros.jpg" alt="imagen equipo" style="width: 100; max-width: 50%;">
-                    <img src="images/nevaditos.jpg" alt="imagen equipo" style="width: 100; max-width: 50%;">
+                    <img src="images/perros.jpg" alt="imagen equipo"
+                        style="width: 100; max-width: 50%;">
+                    <img src="images/nevaditos.jpg" alt="imagen equipo"
+                        style="width: 100; max-width: 50%;">
                 </div>
 
             </div>
@@ -192,7 +194,8 @@ En estas líneas utilizo la librería de iconos. Se trata de una etiqueta
                         <div class="casilla-hora" id="hora4">19:00 - 21:00</div>
 
                         <div class="casilla-marcada" id="marca1"> </div>
-                        <div class="casilla-marcada" id="marca2"> Cancelado</div>
+                        <div class="casilla-marcada" id="marca2">
+                            Cancelado</div>
                         <div class="casilla-marcada" id="marca3"> </div>
                         <div class="casilla-marcada" id="marca4"> </div>
                         <div class="casilla-marcada" id="marca5"> </div>
@@ -200,6 +203,48 @@ En estas líneas utilizo la librería de iconos. Se trata de una etiqueta
                     </div>
 
                 </div>
+            </div>
+        </div>
+        <div class="flex-container">
+            <div id="formulario">
+                <div class="cabecera">
+                    <h1>Formulario de contacto</h1>
+                </div>
+                    <div id="rellenar-formulario">
+                      <label for="nombre">Nombre:</label>
+                      <input type="text" id="nombre" name="nombre">
+                    </div>
+                    <div>
+                      <label for="apellido">Apellido:</label>
+                      <input type="text" id="apellido" name="apellido">
+                    </div>
+                    <div>
+                      <label for="email">Correo Electrónico:</label>
+                      <input type="email" id="email" name="email">
+                    </div>
+                    <div>
+                      <label for="telefono">Teléfono:</label>
+                      <input type="tel" id="telefono" name="telefono">
+                    </div>
+                    <div>
+                      <label for="entrenamiento">Entrenamiento al que quieres asistir:</label>
+                      <select id="entrenamiento" name="entrenamiento">
+                        <option value="lunes">Lunes</option>
+                        <option value="miercoles">Miércoles</option>
+                      
+                        <option value="viernes">Viernes</option>
+                        <option value="sabado">Sábado</option>
+                        <option value="domingo">Domingo</option>
+                        <option value="otro">Otro motivo</option>
+                      </select>
+                    </div>
+                    <div>
+                      <label for="comentarios">Comentarios adicionales:</label>
+                      <textarea id="comentarios" name="comentarios"></textarea>
+                    </div>
+                    <button type="submit">Inscribirse</button>
+                  </form>
+               
             </div>
         </div>
         <footer>
